@@ -1,3 +1,9 @@
+2024-01-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tests/dvisvgm-{uptex,hara}.test:
+	Split tests for upTeX DVIs into two.
+	* Makefile.am: Adjusted.
+
 2024-01-20  Karl Berry  <karl@tug.org>
 
 	* dvisvgm-src/src/Makefile.am (dvisvgm_LDADD) [TEXLIVE_BUILD]:
